--- a/servereureka/pom.xml
+++ b/servereureka/pom.xml
@@ -6,13 +6,12 @@
         <groupId>com.example</groupId>
         <artifactId>helloeureka</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>com.example</groupId>
     <artifactId>servereureka</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-
 
     <dependencies>
         <dependency>
