--- a/servereureka/src/main/resources/application.yml
+++ b/servereureka/src/main/resources/application.yml
@@ -1,12 +1,25 @@
+---
+spring:
+  profiles: peer1
 server:
-  port: 8082
+  port: 8761
 eureka:
   instance:
-    hostname: localhost
+    hostname: peer1
   client:
-    # 由于该应用为注册中心，所以设置为false，代表不向注册中心注册自己
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone:
-        http://${eureka.instance.hostname}:${server.port}/eureka
+    serviceUrl:
+      defaultZone: http://peer2:8762/eureka/
+
+
+---
+
+spring:
+  profiles: peer2
+server:
+  port: 8762
+eureka:
+  instance:
+    hostname: peer2
+  client:
+    serviceUrl:
+      defaultZone: http://peer1:8761/eureka/
